syntax = "proto3";
//done
option java_package = "emu.lunarcore.proto";

import "PlayerBasicInfo.proto";

message PlayerLoginScRsp {
	uint32 stamina = 12;
	bool JLPKEOBINCP = 8;
	PlayerBasicInfo basic_info = 2;
	string PDIKPEIFANN = 3;
	string NHMHABJKHOG = 14;
	uint32 retcode = 15;
	uint64 server_timestamp_ms = 7;
	uint64 login_random = 5;
	bool IGKBEAMLNBJ = 9;
	int32 cur_timezone = 13;
}